Update Stack.java